--- a/404.html
+++ b/404.html
@@ -74,7 +74,7 @@
 					<img src="/images/aviral.png" alt="Aviral Bajpai's photo" class="author-photo">
 					
 					<h4>Aviral Bajpai</h4>
-					<p>An enthusiast learner</p>
+					<p>A enthusiastic learner</p>
 				</li>
 				<li><a href="/about/"><span class="btn btn-inverse">Learn More</span></a></li>
 				
@@ -104,7 +104,7 @@
 	  
 	    <li><a href="https://www.linkedin.com/in/bajpaiaviral19/" target="_blank">Linkedin</a></li>
 	  
-	    <li><a href="https://github.com/aviral19" target="_blank">github</a></li>
+	    <li><a href="https://github.com/aviral19" target="_blank">Github</a></li>
 	  
 	</ul>
 </nav>
@@ -120,7 +120,7 @@
         Sorry, but the page you were trying to view does not exist — perhaps you can try searching for it below.
         <script type="text/javascript">
           var GOOG_FIXURL_LANG = 'en';
-          var GOOG_FIXURL_SITE = 'http:\/\/aviral19.github.io\/'
+          var GOOG_FIXURL_SITE = 'http:\/\/aviral19.github.io'
         </script>
         <script type="text/javascript"
           src="//linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js">
