--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>404 Page not found &#8211; A Virgin&#39;s Pride</title>
+<title>404 Page not found &#8211; A Vigilante&#39;s Pride</title>
 <meta name="description" content="">
 
     
@@ -24,7 +24,7 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="An enthusiastic learner and developer.">
 <meta property="og:url" content="http://aviral19.github.io/404/">
-<meta property="og:site_name" content="A Virgin&#39;s Pride">
+<meta property="og:site_name" content="A Vigilante&#39;s Pride">
 
 
 
@@ -35,8 +35,8 @@
 
 <link rel="canonical" href="http://aviral19.github.io/404/">
 
-  <link href="http://aviral19.github.io/index.xml" rel="alternate" type="application/rss+xml" title="A Virgin&#39;s Pride" />
-  <link href="http://aviral19.github.io/index.xml" rel="feed" type="application/rss+xml" title="A Virgin&#39;s Pride" />
+  <link href="http://aviral19.github.io/index.xml" rel="alternate" type="application/rss+xml" title="A Vigilante&#39;s Pride" />
+  <link href="http://aviral19.github.io/index.xml" rel="feed" type="application/rss+xml" title="A Vigilante&#39;s Pride" />
 
 
 <meta name="HandheldFriendly" content="True">
