--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>About Me &#8211; A Virgin&#39;s Pride</title>
+<title>About Me &#8211; A Vigilante&#39;s Pride</title>
 <meta name="description" content="">
 
     
@@ -24,7 +24,7 @@
 <meta property="og:title" content="About Me">
 <meta property="og:description" content="An enthusiastic learner and developer.">
 <meta property="og:url" content="http://aviral19.github.io/about/">
-<meta property="og:site_name" content="A Virgin&#39;s Pride">
+<meta property="og:site_name" content="A Vigilante&#39;s Pride">
 
 
 
