--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ I am interested in Machine learning and Artificial intelligence, although I am d
     <p>What happens when you are afraid to post on your best friend&rsquo;s facebook timeline,
 well you creepy fuck, you write it on your personal blog.
 Umm, how should I begin ?
-Let it be a question and answer roumd. Kind of like the rapid fire one.</p>
+Let it be a question and answer round. Kind of like the rapid fire one.</p>
 
 <p><em>1.) When did Pandey become your friend ?</em><br />
 Oh that is easy, well let us see, <em>oh fuck you don&rsquo;t remember do you</em>.<br />
@@ -212,7 +212,7 @@ But I had this attachment to Pandey, it was some pleasure she gave me, she still
 She is undoubtedly cute, you always want to keep one cute friend just in case you&rsquo;re
 single, dying alone at 40, you can marry her then.</p>
 
-<p><em>3.) Why did you never propose Pandey, if you had a crush on her ?</em>
+<p><em>3.) Why did you never propose Pandey, if you had a crush on her ?</em><br />
 Okay so you will go all personal on me then, here you go.
 I obviously had a crush on Pandey, I mean don&rsquo;t get to see such beauty around,
 I never could approach her initially due to Rhythm, well she was my first love.
@@ -220,14 +220,14 @@ And to be honest, I wasn&rsquo;t sort of those &lsquo;rangbaaz&rsquo; kids out t
 I was the one with oil on his head, pants quite up his waist, and more like a nerd you can say.
 I don&rsquo;t deny being a nerd, and nor has it let me to a downfall, but it does loses you some opportunities. (gains you some as well.)</p>
 
-<p><em>4.) When did you realize you can never ask her out now ?</em>
+<p><em>4.) When did you realize you can never ask her out now ?</em><br />
 It can be called class 10th I suppose. I mean we were so close to be called a relationship
 by everyone else, but we knew we were &lsquo;only friends&rsquo;, and it was perfect, I could not even dare
 to lose such a beautiful relationship. And even I was &lsquo;lite&rsquo; by then, Pandey was someone who understood me like no other, I was the Prefect of Su-ur house by then (I still wonder why don&rsquo;t they call the houses by their color name - simple <strong>Red House</strong>).<br />
 Pandey did a lot of work for Su-ur house, and hence we came close, we came close like no other.
 And then I had a crush on Surabhi (again all that nerdiness stopped me), and Pandey knew about it, that strengthened our bond like no other.</p>
 
-<p><em>5.) All that is cool, do you still love her ? Like do you want her as your girlfriend ?</em>
+<p><em>5.) All that is cool, do you still love her ? Like do you want her as your girlfriend ?</em><br />
 I would say <strong>No</strong> to this.
 I mean a guy would be more than lucky to have Pandey by his side, I just know her too well, to be in a relationship with her.
 A relationship is more like a puzzle you solve, layer by layer, by showering your love and gaining trust.
@@ -236,7 +236,7 @@ Pandey already has my utmost trust and I have hers. Also, now I don&rsquo;t sexu
 Will you please shut the fuck up, it was long long ago, and I am a guy, every guy does this.<br />
 And well, she has a beauty, why wouldn&rsquo;t someone not want to admire her. You just have a very vague and rude way of saying things.</p>
 
-<p><em>6.) Where do you see all of this heading ?</em>
+<p><em>6.) Where do you see all of this heading ?</em><br />
 If I have to keep a friend like Pandey, I would keep her till eternity.
 You don&rsquo;t get such friends in real life. Sometimes I do think if Pandey is just my hallicunation.
 Well when others confirm that hallicunation it becomes a reality, and Pandey is that amazing reality which happened to me.<br />
